[project]
name = "clistetradeai"
version = "0.1.0"
description = "ClisteTradeAi using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "pandas-ta>=0.4.71b0",
    "yfinance>=1.3.0",
]

[project.scripts]
clistetradeai = "clistetradeai.main:run"
run_crew = "clistetradeai.main:run"
train = "clistetradeai.main:train"
replay = "clistetradeai.main:replay"
test = "clistetradeai.main:test"
run_with_trigger = "clistetradeai.main:run_with_trigger"
api_server = "clistetradeai.api_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
